--- a/Project_2/app.html
+++ b/Project_2/app.html
@@ -83,9 +83,9 @@
 <div id="me">
 <div class="div-lesson">
     <div class="lesson" id="lesson-head">
-        <p class="lesson-heads" id="l1">
+        <h2 class="lesson-heads" id="l1">
             Lesson 1: The basics of HTML and web
-        </p>
+        </h2>
     </div>
     <div class="lesson">
         <p class="head" id="hww">
@@ -139,9 +139,9 @@
 
 <div class="div-lesson">
     <div class="lesson" id="lesson-head">
-        <p class="lesson-heads" id="l2">
+        <h2 class="lesson-heads" id="l2">
             Lesson 2: Creating a Structured Document with HTML
-        </p>
+        </h2>
     </div>
     <div class="lesson">
         <p class="head" id="dt">
