--- a/Project_2/app.html
+++ b/Project_2/app.html
@@ -82,15 +82,15 @@
 </div>
 <div id="me">
 <div class="div-lesson">
-    <div class="lesson" id="lesson-head">
+    <div class="lesson-head">
         <h2 class="lesson-heads" id="l1">
             Lesson 1: The basics of HTML and web
         </h2>
     </div>
     <div class="lesson">
-        <p class="head" id="hww">
+        <h2 class="head" id="hww">
             How web works
-        </p>
+        </h2>
         <p class="content">
             The web is a bunch of computers that communicate with each other.
             When a person goes to a webpage, their computer sends a HTTP request to the server.
@@ -99,9 +99,9 @@
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="html">
+        <h2 class="head" id="html">
             HTML
-        </p>
+        </h2>
         <p class="content">
             HTML stands for Hypertext Markup Language.
             HTML documents form the majority of the content on the web.
@@ -109,27 +109,27 @@
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="tae">
+        <h2 class="head" id="tae">
             Tags and Elements
-        </p>
+        </h2>
         <p class="content">
             <strong>HTML</strong> documents are made up of HTML elements.
             While writting the HTML, we tell browsers the type of each element by using HTML tags.
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="wcas">
+        <h2 class="head" id="wcas">
             Why computers are stupid?
-        </p>
+        </h2>
         <p class="content">
             Computers are stupid because they interpret instructions literally.
             This makes them very unforgiving since a small mistake by a programmer can cause huge problems in a program.
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="ivb">
+        <h2 class="head" id="ivb">
             Inline vs Block Elements
-        </p>
+        </h2>
         <p class="content">
             HTML elements are either inline or block.
             Block elements form an "invisible box" around the content inside of them.
@@ -138,24 +138,24 @@
 </div>
 
 <div class="div-lesson">
-    <div class="lesson" id="lesson-head">
+    <div class="lesson-head">
         <h2 class="lesson-heads" id="l2">
             Lesson 2: Creating a Structured Document with HTML
         </h2>
     </div>
     <div class="lesson">
-        <p class="head" id="dt">
+        <h2 class="head" id="dt">
             Developer Tools (in the Browser)
-        </p>
+        </h2>
         <p class="content">
             HTML elements are either inline or block.
             Block elements form an <em>"invisible box"</em> around the content inside of them.
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="tls">
+        <h2 class="head" id="tls">
             The "tree-like structure" of HTML
-        </p>
+        </h2>
         <p class="content">
             The <em>"tree-like structure"</em> comes from the fact that HTML elements can have other elements inside of them.
             You can draw this relationship like a family tree.
@@ -166,18 +166,18 @@
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="boxes">
+        <h2 class="head" id="boxes">
             The relationship between indented HTML and boxes
-        </p>
+        </h2>
         <p class="content">
             When you read an HTML document as text, you see a wave of changing indentations going up and down the left side of the document.
             The more indented an element is, the more deeply nested it's corresponding "box" is.
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="te">
+        <h2 class="head" id="te">
             Text Editors (for programming)
-        </p>
+        </h2>
         <p class="content">
             When writing code, programmers use special text editors (like Sublime Text for example).
             These editors make the programmer's life easier.
@@ -185,9 +185,9 @@
         </p>
     </div>
     <div class="lesson">
-        <p class="head" id="tee">
+        <h2 class="head" id="tee">
             Some text editors
-        </p>
+        </h2>
         <div class="div-content">
             <a href="https://www.sublimetext.com/">
                 <img src="./img/sublime.jpg" class="icons">
