--- a/Project_2/app.html
+++ b/Project_2/app.html
@@ -12,6 +12,9 @@
         BASICS OF PROGRAMMING
     </h1>
 </div>
+
+<!-- adding catalog for notes by creating a list -->
+
 <div class="catalog">
     <ol>
         <li>
@@ -80,6 +83,9 @@
         </li>
     </ol>
 </div>
+
+<!-- adding lesson 1 to notes -->
+
 <div id="me">
 <div class="div-lesson">
     <div class="lesson-head">
@@ -137,6 +143,8 @@
     </div>
 </div>
 
+    <!-- adding lesson 2 to the notes -->
+
 <div class="div-lesson">
     <div class="lesson-head">
         <h2 class="lesson-heads" id="l2">
@@ -190,13 +198,13 @@
         </h2>
         <div class="div-content">
             <a href="https://www.sublimetext.com/">
-                <img src="./img/sublime.jpg" class="icons">
+                <img src="./img/sublime.jpg" class="icons" alt="Sublime Text">
             </a>
             <a href="https://www.jetbrains.com/webstorm/">
-                <img src="./img/webstorm.png" class="icons">
+                <img src="./img/webstorm.png" class="icons" alt="Webstorm">
             </a>
             <a href="https://atom.io/">
-                <img src="./img/atom.png" class="icons">
+                <img src="./img/atom.png" class="icons" alt="Atom">
             </a>
         </div>
     </div>
